# VariantCalling

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile.jbvc  Dockerfile.methylationqc  Dockerfile.ppmseq  Dockerfile.scRNA_qc  Dockerfile_genomics  LICENSE  Pa_46_333_LuNgs_08.with_ml_qual.vcf.gz.tbi  README.md  build_vc_docker.sh  compare_pysam_cyvcf2.py  install-instance.sh  pyproject.toml  requirements-srsnv.in  requirements.in  requirements.txt  run-tasks.sh  run_tests.sh  samtools LICENSE.txt  setup.cfg  setup.py  test.ipynb  test.txt  variantCalling.sublime-project  variantCalling.sublime-workspace
.devcontainer/: devcontainer.json
.github/workflows/: build-methylationqc-docker-for-apl.yml  build-ppmseq-docker-for-apl.yml  build-scrna_qc-docker-for-apl.yml  build-vc-docker.yml  ci.yml  miniconda.yml  python-package-conda.yml
Third Party Licenses/: star LICENSE.txt
build_utils/: install.sh
docs/: coverage_analysis.md  createVarReport.md  error_metric_pipeline.md  error_mode_pipeline.md  evaluate_concordance.md  filter_and_compare_variants.md  filter_variants_pipeline.md  format_note.lyx  germline_cnv_calling.md  howto-callset-filter.md  rapid_qc_pipeline.md  run_comparison_pipeline.md  train_models_pipeline.md  variantFilteringPackage.md  variant_calling_pipeline.md
setup/: .bash_profile  .bashrc  .profile  Dockerfile_genomics  aws_authenticate.sh  environment.yml  prepare_ground_truths.sh
setup/methylationqc/: pyproject.toml
setup/methylationqc/data/: meth_hg38-chr20_Lambda_pUC19.interval_list
setup/other_envs/: cnmops.yml  cutadapt.yml  cutadaptenv.yml  sigpross.yml  ucsc.yml
setup/ppmseq/: pyproject.toml
setup/scRNA_qc/: Dockerfile  pyproject.toml
src/: simulator.py  utils.py
src/bash/: find_adapter_coords.sh  index_vcf_file.sh  remove_empty_files.sh  remove_vcf_duplicates.sh  run_ucsc_command.sh
src/python/: error_model.py  flowBasedRead.py  quality_scores.py  readExpander.py  simulator.py  utils.py  variant_filtering_utils.py  vcftools.py
src/python_tests/: pathmagic.py  test_convert_h5_to_json_utils.py  test_coverage_analysis.py  test_db_access.py  test_featuremap.py  test_flow_based_concordance.py  test_flow_based_read.py  test_mrd_utils.py  test_run_no_gt_report.py  test_sv_breakpoint_candidates.py  test_trimming.py  test_variant_annotation.py  test_variant_filtering_utils.py  test_vc_pipeline_utils.py  test_vc_report.py  test_vcf_pipeline_utils.py  test_vcftools.py
test/: __init__.py
test/resources/: single_sample_example.vcf  single_sample_example.vcf.gz.tbi
test/system/: test_CNV_eval.py  test_annotate_FREEC_segments.py  test_annotate_featuremap.py  test_balanced_strand_analysis.py  test_bicseq2_post_processing.py  test_calibrate_bridging_snvs.py  test_cnv_calling_using_cnmops.py  test_collect_hpol_table.py  test_convert_bedGraph_to_Granges.py  test_coverage_analysis.py  (+31 more)
ugvc/: __init__.py  __main__.py
utilities_env/ppmseq/: pyproject.toml
(+806 files in other folders)
