[tool.poetry]
name = "scrna_qc"
version = "1.0.13"
description = ""
authors = ["Inbal Zelig <inbal.zelig@ultimagen.com>"]
packages = [
    { include = "ugvc" }, # necessary for creating a wheel out of the entire repository
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = {version = "^2.1.4", extras = ["hdf5"]}
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
h5py = "^3.10.0"
tables = "^3.9.2"
bio = "^1.6.2"
papermill = "^2.5.0"
notebook = "^7.1.2"
scikit-learn = "^1.3.2"
pysam = "^0.22.0"
xgboost = "^2.0.3" #dependency for ugvc, not used in the scRNA qc pipeline


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
single_cell_qc = 'ugvc.pipelines.single_cell_qc.single_cell_qc_pipeline:main'
