[tool.poetry]
name = "ppmseq"
version = "1.0.0"
description = ""
authors = ["Itai Rusinek <itai.rusinek@ultimagen.com>"]
license = "Apache-2.0"
packages = [
    { include = "ugvc" }, # necessary for creating a wheel out of the entire repository
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.4"
pysam = "^0.22.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
h5py = "^3.10.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
pybigwig = "^0.3.22"
pyfaidx = "^0.7.2.2"
simppl = "^1.0.7"
boto3 = "^1.34.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
